# cli

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: check.yml  release.yml
src/: alice.json  main.rs
