[package]
name = "txtcv"
version = "0.2.0"
description = "Command-line tool for managing CVs with txtcv"
license-file = "LICENSE"
homepage = "https://txtcv.com/cli/"
repository = "https://github.com/txtcv/cli"
edition = "2021"
keywords = ["cli", "resume", "curriculum-vitae", "txtcv"]
categories = ["command-line-utilities", "config"]

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
confy = "1.0.0"
jsonschema = "0.33.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
serde_json = "1.0.145"
ureq = { version = "3.1.2", features = ["json"] }
